Fixed issues with lightbox and call manager overlays being misaligned due to new flex rules
Due to .inbox-container becoming flex, and .inbox having align-items center, some overlays needed adjustment to remain properly full-screen

--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -11,6 +11,10 @@
   position: relative;
 }
 
+.call-manager-placeholder {
+  align-self: normal;
+}
+
 .inbox-container {
   .limit-width & {
     max-width: 1280px;
