--- a/stylesheets/_lightbox.scss
+++ b/stylesheets/_lightbox.scss
@@ -3,7 +3,7 @@
 
 .lightbox-container {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
